# bit-torrent-client

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: ci.yml  cppcheck.yml
include/: BencodeParser.hpp  Connection.hpp  Handshake.hpp  Peer.hpp  TorrentFile.hpp  TorrentMetadataLoader.hpp  TrackerCommunicator.hpp
include/app/: file_handler.hpp  peer_manager.hpp  peer_session.hpp  piece_manager.hpp  progress_tracker.hpp  torrent_orchestrator.hpp
include/core/: bencode_parser.hpp  peer_communicator.hpp  torrent_metadata_loader.hpp  tracker_communicator.hpp  utils.hpp
src/: BencodeParser.cpp  Peer.cpp  main.cpp
src/app/: file_handler.cpp  peer_manager.cpp  peer_session.cpp  piece_manager.cpp  progress_tracker.cpp  torrent_orchestrator.cpp
src/core/: BencodeParser.cpp  Connection.cpp  Handshake.cpp  TorrentFile.cpp  TorrentMetadataLoader.cpp  TrackerCommunicator.cpp  bencode_parser.cpp  peer_communicator.cpp  torrent_metadata_loader.cpp  tracker_communicator.cpp  utils.cpp
tests/: BencodeParserTests.cpp  ConnectionTests.cpp  TorrentMetadataLoaderTests.cpp  bencode_parser_tests.cpp  connection_tests.cpp  hash_calc.py  peer_communication_tests.cpp  torrent_metadata_loader_tests.cpp
